--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,18 @@
                     </execution>
                 </executions>
             </plugin>
+            
+            <plugin>
+<groupId>org.codehaus.mojo</groupId>
+<artifactId>cobertura-maven-plugin</artifactId>
+<version>2.5.1</version>
+<configuration>
+<formats>
+<format>html</format>
+<format>xml</format>
+ </formats>
+</configuration>
+</plugin>
 
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
