--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
         <thucydides.version>1.8.4</thucydides.version>
         <jelastic.context>gameoflife</jelastic.context>
         <jelastic.environment>wakaleo</jelastic.environment>
+        <sonar.host.url>http://65.2.57.28:9000/</sonar.host.url>
+        <sonar.login>admin</sonar.login>
+        <sonar.password>admin</sonar.password>
+
     </properties>
 
     <scm>
