--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -14,6 +14,9 @@
     <properties>
         <jetty.port>9090</jetty.port>
         <jetty.stop.port>9999</jetty.stop.port>
+        <sonar.host.url>http://65.2.57.28:9000/</sonar.host.url>
+        <sonar.login>admin</sonar.login>
+        <sonar.password>admin</sonar.password>
     </properties>
 
     <build>
