--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,12 @@
                 </executions>
             </plugin>
             -->
-            <plugin>
+ <plugin>
+  <groupId>org.jacoco</groupId>
+  <artifactId>jacoco-maven-plugin</artifactId>
+  <version>0.8.8-SNAPSHOT</version>
+</plugin>           
+ <plugin>
 <groupId>org.codehaus.mojo</groupId>
 <artifactId>cobertura-maven-plugin</artifactId>
 <version>2.5.1</version>
