--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,13 @@
             </extension>
         </extensions>
     </build>
+    
+ <distributionManagement>
+   <snapshotRepository>
+      <id>nexus</id>
+      <url>http://65.0.19.73:8081/repository/gameoflife-snapshot/</url>
+   </snapshotRepository>
+</distributionManagement>
     <dependencyManagement>
         <dependencies>
             <dependency>
