--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,14 @@
             </extension>
         </extensions>
     </build>
+    
+    <distributionManagement>
+   <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://65.0.19.73:8081/repository/gameoflife-snapshot/</url>
+   </snapshotRepository>
+</distributionManagement>
+    
     <dependencyManagement>
         <dependencies>
             <dependency>
